@@ -1,2 +1,2 @@
-VERSION="1.8.0"
+VERSION="1.8.0+"
 
