@@ -1,5 +1,11 @@
 Release Notes for the Alamaze Turn Parser
 
+Version next
+--------------------------------------------------------------------------------
+- Correct calculations for the Emissary Tool. They are now closer to what is in
+  the Frost Lord 320/330 tool. However, they always assume a worst case but 
+  do not take into account any emissaries issing status quo orders. 
+
 Version 1.8.0
 --------------------------------------------------------------------------------
 - Updated so it can understand more than one kingdom at a time. For example, 
